# fem

./: CMakeLists.txt  README.md
include/: fem.hpp
include/bc/: boundary_condition.hpp
include/core/: matrix.hpp  sparse_matrix.hpp  vector.hpp
include/fem/: assembler.hpp  element_matrix.hpp  fem_solver.hpp  quadrature.hpp  shape_function.hpp
include/mesh/: mesh.hpp  mesh_generator.hpp
include/solver/: linear_solver.hpp
include/utils/: logger.hpp  timer.hpp
